feat: compress tree-sitter snapshot files with GZIP